# optimic

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: rust.yml
blockchain/: Cargo.toml  Dockerfile  config.toml  genesis.json
blockchain/src/: abci.rs  app.rs  collateral.rs  consensus.rs  lib.rs  main.rs  options.rs  state.rs  storage.rs  trading.rs  types.rs
doc/: mvp_task_breakdown.md  whitepaper.md
