[package]
name = "optimic-core"
version = "0.1.0"
edition = "2021"
authors = ["Optimic Team"]
description = "Optimic Protocol - High-Performance Layer 1 Blockchain for Options Trading"
license = "MIT"
repository = "https://github.com/optimic-protocol/optimic"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }

# Note: Tendermint and heavy dependencies will be added later
# tendermint = "0.37"
# tendermint-abci = "0.37" 
# rocksdb = "0.21"
# sled = "0.34"
# libp2p = "0.53"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[[bin]]
name = "optimic-node"
path = "src/bin/node.rs"

[lib]
name = "optimic_core"
path = "src/lib.rs"
